video size fix
videos were too large on mobile screens

--- a/index.css
+++ b/index.css
@@ -139,6 +139,9 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+.card video{
+    max-width: 100%;
+}
 
 .flex-container {
   display: flex;
